--- a/practice_project/package.json
+++ b/practice_project/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^12.12.26",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.7.5"
+    "//" : "07-1 add",
+    "@types/node": "^12.19.14",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   }
 }
